# clockwork-orange

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  fly.toml
.github/workflows/: fly.yml  rust.yml
clockwork-orange/: Cargo.toml
clockwork-orange-messages/: Cargo.toml
clockwork-orange-messages/messages/test/: stats_for_today.md
clockwork-orange-messages/src/: lib.rs
clockwork-orange/src/: bot.rs  config.rs  content_item.rs  listeners.rs  main.rs  storage.rs
clockwork-orange/src/bot/: callbacks.rs  commands.rs  extractors.rs  handlers.rs
clockwork-orange/src/storage/: memory.rs  redis.rs
