[package]
name = "clockwork-orange"
version = { workspace = true }
authors = { workspace = true }
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.68"
bincode = "1.3.3"
color-eyre = "0.6.2"
dotenvy = "0.15.7"
dptree = "0.3.0"
envy = "0.4.2"
indoc = "2.0.1"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
serde = { version = "1.0.164", features = ["derive"] }
teloxide = { version = "0.12.2", default-features = false, features = ["auto-send", "ctrlc_handler", "rustls", "macros", "webhooks-axum", "throttle"] }
time = { version = "0.3.22", features = ["serde"] }
tokio = { version = "1.28.2", features = ["full"] }
url = { version = "2.4.0", features = ["serde"] }

clockwork-orange-messages = { path = "../clockwork-orange-messages" }
redis = { version = "0.23.0", default-features = false, features = ["acl", "aio", "r2d2", "connection-manager", "tokio-comp"] }
